--- a/Technical skills.html
+++ b/Technical skills.html
@@ -14,7 +14,7 @@
           <li>HTML</li>
           <li>AWS Cloud Computing</li>
         </ul></p>
-        <a href="Prashant Kumar Resume.html">Prashant Kumar Resume</a><br>
+        <a href="index.html">Prashant Kumar Resume</a><br>
         <a href="Hobbies.html">Hobbies</a>
   </body>
 </html>
