--- a/Contact.html
+++ b/Contact.html
@@ -48,6 +48,6 @@ Gender <label for="Male" >Male</label>
 </form>
 <br>
 <a href="Project.html">Project</a><br>
-<a href="Prashant Kumar Resume.html">Prashant Kumar Resume</a>
+<a href="index.html">Prashant Kumar Resume</a>
     </body>
 </html>
