--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <CENTER>
     <h1><strong>Resume</strong></h1>
   </CENTER>
-  <img src="Prashant Kumar Image Short.jpg " alt=" Prashant Kumar Image" height="120" width="110">
+  <img src="Prashant Kumar Image Short.jpg " alt=" Prashant Kumar" height="120" width="110">
   <h3><em>Prashant Kumar</em></h3>
   <hr size=2 noshade>
   <p><strong>
