--- a/Hobbies.html
+++ b/Hobbies.html
@@ -25,7 +25,7 @@
   <li> Badminton</li>
   <li>Tennis</li>
 </ol>
-<a href="Technical Skills.html">Technical Skills</a><br>
+<a href="Technical skills.html">Technical Skills</a><br>
 <a href="Project.html">Project</a>
   </body>
 </html>
