--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </tbody>
     </table>
     <br>
-  <a href="Technical Skills.html">Technical skills</a><br>
+  <a href="Technical skills.html">Technical skills</a><br>
   <a href="Hobbies.html">Hobbies</a><br>
   <a href="Project.html">Project</a><br>
   <a href="Contact.html"> Contact </a>
