--- a/Project.html
+++ b/Project.html
@@ -20,6 +20,6 @@
 The program uses MySQL as a Database management system on a website, as well as strategies for selecting a different system domain such as SQL Server, a working bench.
 </p>
 <a href="Hobbies.html">Hobbies</a><br>
-<a href="Contact.html">Contact.html</a>
+<a href="Contact.html">Contact</a>
   </body>
 </html>
