--- a/Project.html
+++ b/Project.html
@@ -17,7 +17,7 @@
                     <h2>Attendance System</h2></strong><p>
 
                     The Attendance Program designed the MVC structure and implemented the Spring Framework.<br> The application is designed with the latest technology for servlets and the original html, CSS.<br>
-The program uses MySQL as a Database management system on a website, as well as strategies for selecting a different system domain such as SQL Server, a working bench.
+The program uses MySQL as a Database management system on a website, as well as on strategies for selecting a different system domain such as SQL Server, a working bench.
 </p>
 <a href="Hobbies.html">Hobbies</a><br>
 <a href="Contact.html">Contact</a>
